--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,13 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "symfony/yaml": "~2.1|~3.0",
-        "illuminate/console": "5.*",
-        "illuminate/support": "5.*",
-        "illuminate/database": "5.*",
-        "illuminate/http": "5.*"
+        "illuminate/auth": "5.*",
+        "illuminate/support": "5.*"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.8|~5.7",
-        "longman/php-code-style": "^1.0",
-        "graham-campbell/testbench": "^3.4"
+        "longman/php-code-style": "^1.0"
     },
     "autoload": {
         "psr-4": {
