--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.8|~5.7",
+        "phpunit/phpunit": "~4.8",
         "longman/php-code-style": "^1.0"
     },
     "autoload": {
