--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.8",
+        "doctrine/instantiator": "1.0.*",
         "longman/php-code-style": "^1.0"
     },
     "autoload": {
