--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.8",
         "doctrine/instantiator": "1.0.*",
+        "doctrine/inflector": "1.1.*",
         "longman/php-code-style": "^1.0"
     },
     "autoload": {
